# ai-habit-tracker

./: README.md  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: add_habit.html  base.html  index.html
